# ArPiRobot-VSCodeExtension

./: .gitignore  CHANGELOG.md  README.md  bytes_from_file.py  package-lock.json  package.json
src/: contents.ts  extension.ts
templates/cpp/: CMakeLists.txt  CMakePresets.json  arpirobot-aarch64-toolchain.cmake  arpirobot-armv6-toolchain.cmake  arpirobot-cross.cmake  arpirobot-proj.json  main.sh
templates/cpp/include/: actions.hpp  main.hpp  robot.hpp
templates/cpp/src/: actions.cpp  main.cpp  robot.cpp
templates/java/: .gitignore  arpirobot-proj.json  build.gradle  main.sh
templates/java/src/main/java/robot/: Main.java  Robot.java
templates/java/src/main/java/robot/actions/: ExampleAction.java
templates/python/: arpirobot-proj.json  main.sh
templates/python/src/: actions.py  main.py  robot.py
